fix(deprecation): replaced the deprecated use of Class.newInstance with Constructor.newInstance